[package]
name = "e_drone_rpi"
version = "21.3.7"
authors = ["Sanghyo Lee <realwolfmax@gmail.com>"]
description = "Rust library for BYROBOT Drones."
documentation = "https://docs.rs/e_drone_rpi"
homepage = "https://github.com/byrobot-rust/e_drone_rpi"
repository = "https://github.com/byrobot-rust/e_drone_rpi"
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "e_drone_rpi"
bench = false


[dependencies]
rppal="0.11.3"
e_drone="21.*"
chrono="0.4.*"

